<resources>
    <string name="app_name">RecyclerViewTask</string>
    <string name="tv_name">Robert de Niro</string>
    <string name="tv_company">Tinkoff</string>
    <string name="cd_avatar">avatar</string>
    <string name="cd_image_more">image more</string>

    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="remove">Remove</string>

    <string name="fire">Fire</string>
    <string name="unemployed">Unemployed</string>
    <string name="person_photo">person photo</string>
    <string name="details">Details</string>
    <string name="name_fragment">Arsen Kocharyan</string>
    <string name="delete_btn">DELETE</string>
    <string name="failed_to_load_users">Failed to load users</string>
    <string name="try_again">try again</string>
    <string name="no_users">No users</string>

    <string name="user_delete">User delete</string>

    <string name="cant_load_user_details">Cannot load user details</string>
    <string name="user_has_been_deleted">User has been deleted</string>
    <string name="cant_delete_user">Cannot delete user</string>
    <string name="cant_move_user">Cannot move user</string>
</resources>